Resolves: tdf#95440 SharedString are interned per document, re-intern

... if literal strings are copied with formula expression tokens.

Change-Id: I13526907bb6c2c605c6ed9584fa6e3f2b18623b8
(cherry picked from commit dad412e07f805a53ad73ce2e80d187a70c77e8de)