include/formula/token.hxx
@@ -151,6 +151,7 @@ public:
     virtual double              GetDouble() const;
     virtual double&             GetDoubleAsReference();
     virtual svl::SharedString   GetString() const;
+    virtual void                SetString( const svl::SharedString& rStr );
     virtual sal_uInt16          GetIndex() const;
     virtual void                SetIndex( sal_uInt16 n );
     virtual bool                IsGlobal() const;
@@ -283,6 +284,7 @@ public:
 
     virtual FormulaToken* Clone() const override;
     virtual svl::SharedString GetString() const override;
+    virtual void SetString( const svl::SharedString& rStr ) override;
     virtual bool operator==( const FormulaToken& rToken ) const override;
 
     DECL_FIXEDMEMPOOL_NEWDEL_DLL( FormulaStringToken )
@@ -300,6 +302,7 @@ public:
 
     virtual FormulaToken* Clone() const override;
     virtual svl::SharedString GetString() const override;
+    virtual void SetString( const svl::SharedString& rStr ) override;
     virtual bool operator==( const FormulaToken& rToken ) const override;
 };
 
